networking/istio/base/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata: { name: civiclink-default-deny, namespace: civiclink }
spec: { action: DENY, rules: [{}] }
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata: { name: allow-from-platform, namespace: civiclink }
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/civiclink/sa/api-gateway
              - cluster.local/ns/civiclink/sa/citizen-bff
              - cluster.local/ns/civiclink/sa/officer-bff
              - cluster.local/ns/civiclink/sa/mobile-bff
